# cmake-demo

./: .gitignore  CMakeLists.txt  Makefile
src/: main.c  sub.c
